Added empty pie after a filled pie
# 0.00.19 (59488) Dec 20, 2011
Fixed: a "zero" is not displayed for the "mixed" option.
# 0.00.18 (59483) Dec 19, 2011
Made water tick marks darker
Enabled "holding down the spinner" to cycle through the numbers at a medium speed
Changed max denominator back to 8
Fixed: Cursor hand should turn into an arrow when spinner button disables
Fixed: When pressing toggle button, mouse hand should turn into an arrow
Fixed: If toggle button already pressed, it shouldn't have a mouse hand
Allow numerator to go to 0
Renamed "improper" -> "reduced"
Truncated the number line at 6 (the max value for fractions to be displayed on the screen)
Use a cup image instead of beaker
Made liquid green instead of blue
Added logic for "random fill"
# 0.00.17 (59365) Dec 14, 2011
Added beaker of water leveraging as much code from dilutions as possible, see #3185
Added "None" option to the fraction equality display control panel
# 0.00.16 (59341) Dec 13, 2011
Added cake representation to intro tab
Temporarily increased denominator from 8 to 12 in intro tab for purposes of testing cake with given images
Fixed "Reset all" on intro tab
Centered representations vertically on Intro tab
Removed the grid
Made pie representation first in the control panel
Made pie representation selected by default
# 0.00.15 (59324) Dec 13, 2011
Made 6 vertical bars exactly fit the width of the screen
Made pies exactly fit the width of the screen
Constrain the horizontal bar representation to fill the screen when there are 6 and to take up 2 rows
Fixed: Oddly, the circles look well centered and such when there are 6 "wholes" but 6 circles divided into "fifths" goes slightly off screen.
# 0.00.14 (59312) Dec 13, 2011
Improvements in Intro tab
Started Equivalence Lab
Removed "Representation" control panel text
Constrain denominator based on the numerator so that the entire number is less than or equal to 6
# 0.00.13 (59217) Dec 9, 2011
Added highlight for number line